# mlog

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  LICENSE.txt  README.md  log.txt.38  manager.hpp
benchmark_src/: benchmark.cpp
debian/: CMakeLists.txt  Development.cpack  Development.cpack.in  MlogConfig.cmake.in  Runtime.cpack
doc/: Doxyfile
doc/html/: annotated.html  classes.html  classmlog_1_1file__logger-members.html  classmlog_1_1file__logger.html  classmlog_1_1leveled__logger-members.html  classmlog_1_1leveled__logger.html  classmlog_1_1log-members.html  classmlog_1_1log.html  classmlog_1_1log__debug-members.html  classmlog_1_1log__debug.html  classmlog_1_1log__error-members.html  classmlog_1_1log__error.html  classmlog_1_1log__fatal-members.html  classmlog_1_1log__fatal.html  classmlog_1_1log__info-members.html  classmlog_1_1log__info.html  classmlog_1_1log__trace-members.html  classmlog_1_1log__trace.html  classmlog_1_1log__warning-members.html  classmlog_1_1log__warning.html  classmlog_1_1logger-members.html  classmlog_1_1logger.html  classmlog_1_1memory__logger-members.html  classmlog_1_1memory__logger.html  classmlog_1_1standard__logger-members.html  classmlog_1_1standard__logger.html  classmlog_1_1thread__safe-members.html  classmlog_1_1thread__safe.html  file__logger_8hpp_source.html  files.html  hierarchy.html  index.html  leveled__logger_8hpp_source.html  logger_8hpp_source.html  memory__logger_8hpp_source.html  mlog_8hpp_source.html  standard__logger_8hpp_source.html  structmlog_1_1log__metadata-members.html  structmlog_1_1log__metadata.html  structmlog_1_1memory__entry-members.html  (+2 more)
doc/html/search/: all_66.html  all_6d.html  all_73.html  all_74.html  classes_6c.html  search.js
libs/: mlog.cpp
mlog/: async_logger.hpp  file_logger.cpp  file_logger.hpp  leveled_logger.cpp  leveled_logger.hpp  logger.cpp  logger.hpp  manager.hpp  memory_logger.hpp  metadata.hpp  mlog.cpp  mlog.hpp  multiple_loggers.hpp  queue.hpp  standard_logger.hpp  syslog_logger.hpp  thread_safe.hpp
mlog/impl/: file_logger.hpp  leveled_logger.hpp  leveled_logger.ipp  logger.hpp  logger.ipp  metadata.hpp  mlog.hpp  mlog.ipp
test_src/: main.cpp  test.cpp
vs2012/mlog/: mlog.sln
vs2012/mlog/mlog/: ReadMe.txt  mlog.vcxproj  mlog.vcxproj.filters
vs2013/mlog/: mlog.sln
vs2013/mlog/Test/: Test.vcxproj
vs2013/mlog/mlog/: ReadMe.txt  mlog.vcxproj
